src/LatteParser.py
# Generated from Latte.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class LatteParser ( Parser ):

    grammarFileName = "Latte.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'}'", "'extends'", 
                     "','", "';'", "'('", "')'", "'='", "'++'", "'--'", 
                     "'return'", "'if'", "'else'", "'while'", "'int'", "'string'", 
                     "'boolean'", "'void'", "'.'", "'&&'", "'||'", "'true'", 
                     "'false'", "'new'", "'null'", "'!'", "'-'", "'+'", 
                     "'*'", "'/'", "'%'", "'<'", "'<='", "'>'", "'>='", 
                     "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "COMMENT", 
                      "MULTICOMMENT", "INT", "ID", "WS", "STR" ]

    RULE_program = 0
    RULE_topDef = 1
    RULE_classattr = 2
    RULE_classfun = 3
    RULE_fundef = 4
    RULE_arg = 5
    RULE_block = 6
    RULE_stmt = 7
    RULE_type_ = 8
    RULE_item = 9
    RULE_expr = 10
    RULE_unOp = 11
    RULE_addOp = 12
    RULE_mulOp = 13
    RULE_relOp = 14

    ruleNames =  [ "program", "topDef", "classattr", "classfun", "fundef", 
                   "arg", "block", "stmt", "type_", "item", "expr", "unOp", 
                   "addOp", "mulOp", "relOp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    COMMENT=39
    MULTICOMMENT=40
    INT=41
    ID=42
    WS=43
    STR=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def topDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.TopDefContext)
            else:
                return self.getTypedRuleContext(LatteParser.TopDefContext,i)


        def getRuleIndex(self):
            return LatteParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LatteParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 30
                self.topDef()
                self.state = 33 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.T__0) | (1 << LatteParser.T__15) | (1 << LatteParser.T__16) | (1 << LatteParser.T__17) | (1 << LatteParser.T__18) | (1 << LatteParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LatteParser.RULE_topDef

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ClassDefContext(TopDefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.TopDefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(LatteParser.ID, 0)
        def classattr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ClassattrContext)
            else:
                return self.getTypedRuleContext(LatteParser.ClassattrContext,i)

        def classfun(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ClassfunContext)
            else:
                return self.getTypedRuleContext(LatteParser.ClassfunContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDef" ):
                listener.enterClassDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDef" ):
                listener.exitClassDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDef" ):
                return visitor.visitClassDef(self)
            else:
                return visitor.visitChildren(self)


    class FunTopDefContext(TopDefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.TopDefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def fundef(self):
            return self.getTypedRuleContext(LatteParser.FundefContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunTopDef" ):
                listener.enterFunTopDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunTopDef" ):
                listener.exitFunTopDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunTopDef" ):
                return visitor.visitFunTopDef(self)
            else:
                return visitor.visitChildren(self)


    class ClassExtDefContext(TopDefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.TopDefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LatteParser.ID)
            else:
                return self.getToken(LatteParser.ID, i)
        def classattr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ClassattrContext)
            else:
                return self.getTypedRuleContext(LatteParser.ClassattrContext,i)

        def classfun(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ClassfunContext)
            else:
                return self.getTypedRuleContext(LatteParser.ClassfunContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassExtDef" ):
                listener.enterClassExtDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassExtDef" ):
                listener.exitClassExtDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassExtDef" ):
                return visitor.visitClassExtDef(self)
            else:
                return visitor.visitChildren(self)



    def topDef(self):

        localctx = LatteParser.TopDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topDef)
        self._la = 0 # Token type
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = LatteParser.FunTopDefContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                self.fundef()
                pass

            elif la_ == 2:
                localctx = LatteParser.ClassDefContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 36
                self.match(LatteParser.T__0)
                self.state = 37
                self.match(LatteParser.ID)
                self.state = 38
                self.match(LatteParser.T__1)
                self.state = 42
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 39
                        self.classattr() 
                    self.state = 44
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.T__15) | (1 << LatteParser.T__16) | (1 << LatteParser.T__17) | (1 << LatteParser.T__18) | (1 << LatteParser.ID))) != 0):
                    self.state = 45
                    self.classfun()
                    self.state = 50
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 51
                self.match(LatteParser.T__2)
                pass

            elif la_ == 3:
                localctx = LatteParser.ClassExtDefContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.match(LatteParser.T__0)
                self.state = 53
                self.match(LatteParser.ID)
                self.state = 54
                self.match(LatteParser.T__3)
                self.state = 55
                self.match(LatteParser.ID)
                self.state = 56
                self.match(LatteParser.T__1)
                self.state = 60
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 57
                        self.classattr() 
                    self.state = 62
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.T__15) | (1 << LatteParser.T__16) | (1 << LatteParser.T__17) | (1 << LatteParser.T__18) | (1 << LatteParser.ID))) != 0):
                    self.state = 63
                    self.classfun()
                    self.state = 68
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 69
                self.match(LatteParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassattrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(LatteParser.Type_Context,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LatteParser.ID)
            else:
                return self.getToken(LatteParser.ID, i)

        def getRuleIndex(self):
            return LatteParser.RULE_classattr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassattr" ):
                listener.enterClassattr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassattr" ):
                listener.exitClassattr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassattr" ):
                return visitor.visitClassattr(self)
            else:
                return visitor.visitChildren(self)




    def classattr(self):

        localctx = LatteParser.ClassattrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classattr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.type_()
            self.state = 73
            self.match(LatteParser.ID)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LatteParser.T__4:
                self.state = 74
                self.match(LatteParser.T__4)
                self.state = 75
                self.match(LatteParser.ID)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self.match(LatteParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassfunContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fundef(self):
            return self.getTypedRuleContext(LatteParser.FundefContext,0)


        def getRuleIndex(self):
            return LatteParser.RULE_classfun

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassfun" ):
                listener.enterClassfun(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassfun" ):
                listener.exitClassfun(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassfun" ):
                return visitor.visitClassfun(self)
            else:
                return visitor.visitChildren(self)




    def classfun(self):

        localctx = LatteParser.ClassfunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classfun)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.fundef()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FundefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LatteParser.RULE_fundef

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FunDefContext(FundefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.FundefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(LatteParser.Type_Context,0)

        def ID(self):
            return self.getToken(LatteParser.ID, 0)
        def block(self):
            return self.getTypedRuleContext(LatteParser.BlockContext,0)

        def arg(self):
            return self.getTypedRuleContext(LatteParser.ArgContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunDef" ):
                listener.enterFunDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunDef" ):
                listener.exitFunDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunDef" ):
                return visitor.visitFunDef(self)
            else:
                return visitor.visitChildren(self)



    def fundef(self):

        localctx = LatteParser.FundefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fundef)
        self._la = 0 # Token type
        try:
            localctx = LatteParser.FunDefContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.type_()
            self.state = 86
            self.match(LatteParser.ID)
            self.state = 87
            self.match(LatteParser.T__6)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.T__15) | (1 << LatteParser.T__16) | (1 << LatteParser.T__17) | (1 << LatteParser.T__18) | (1 << LatteParser.ID))) != 0):
                self.state = 88
                self.arg()


            self.state = 91
            self.match(LatteParser.T__7)
            self.state = 92
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.Type_Context)
            else:
                return self.getTypedRuleContext(LatteParser.Type_Context,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LatteParser.ID)
            else:
                return self.getToken(LatteParser.ID, i)

        def getRuleIndex(self):
            return LatteParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = LatteParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.type_()
            self.state = 95
            self.match(LatteParser.ID)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LatteParser.T__4:
                self.state = 96
                self.match(LatteParser.T__4)
                self.state = 97
                self.type_()
                self.state = 98
                self.match(LatteParser.ID)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.StmtContext)
            else:
                return self.getTypedRuleContext(LatteParser.StmtContext,i)


        def getRuleIndex(self):
            return LatteParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LatteParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(LatteParser.T__1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.T__1) | (1 << LatteParser.T__5) | (1 << LatteParser.T__6) | (1 << LatteParser.T__11) | (1 << LatteParser.T__12) | (1 << LatteParser.T__14) | (1 << LatteParser.T__15) | (1 << LatteParser.T__16) | (1 << LatteParser.T__17) | (1 << LatteParser.T__18) | (1 << LatteParser.T__22) | (1 << LatteParser.T__23) | (1 << LatteParser.T__24) | (1 << LatteParser.T__26) | (1 << LatteParser.T__27) | (1 << LatteParser.INT) | (1 << LatteParser.ID) | (1 << LatteParser.STR))) != 0):
                self.state = 106
                self.stmt()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112
            self.match(LatteParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LatteParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ExprContext)
            else:
                return self.getTypedRuleContext(LatteParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAss" ):
                listener.enterAss(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAss" ):
                listener.exitAss(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAss" ):
                return visitor.visitAss(self)
            else:
                return visitor.visitChildren(self)


    class DecrContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecr" ):
                listener.enterDecr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecr" ):
                listener.exitDecr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecr" ):
                return visitor.visitDecr(self)
            else:
                return visitor.visitChildren(self)


    class RetContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRet" ):
                listener.enterRet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRet" ):
                listener.exitRet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRet" ):
                return visitor.visitRet(self)
            else:
                return visitor.visitChildren(self)


    class EmptyContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmpty" ):
                listener.enterEmpty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmpty" ):
                listener.exitEmpty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmpty" ):
                return visitor.visitEmpty(self)
            else:
                return visitor.visitChildren(self)


    class CondContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)

        def stmt(self):
            return self.getTypedRuleContext(LatteParser.StmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond" ):
                listener.enterCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond" ):
                listener.exitCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond" ):
                return visitor.visitCond(self)
            else:
                return visitor.visitChildren(self)


    class CondElseContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.StmtContext)
            else:
                return self.getTypedRuleContext(LatteParser.StmtContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondElse" ):
                listener.enterCondElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondElse" ):
                listener.exitCondElse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondElse" ):
                return visitor.visitCondElse(self)
            else:
                return visitor.visitChildren(self)


    class VRetContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVRet" ):
                listener.enterVRet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVRet" ):
                listener.exitVRet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVRet" ):
                return visitor.visitVRet(self)
            else:
                return visitor.visitChildren(self)


    class IncrContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncr" ):
                listener.enterIncr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncr" ):
                listener.exitIncr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncr" ):
                return visitor.visitIncr(self)
            else:
                return visitor.visitChildren(self)


    class BlockStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(LatteParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStmt" ):
                listener.enterBlockStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStmt" ):
                listener.exitBlockStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStmt" ):
                return visitor.visitBlockStmt(self)
            else:
                return visitor.visitChildren(self)


    class DeclContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(LatteParser.Type_Context,0)

        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ItemContext)
            else:
                return self.getTypedRuleContext(LatteParser.ItemContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)

        def stmt(self):
            return self.getTypedRuleContext(LatteParser.StmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class SExpContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSExp" ):
                listener.enterSExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSExp" ):
                listener.exitSExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSExp" ):
                return visitor.visitSExp(self)
            else:
                return visitor.visitChildren(self)



    def stmt(self):

        localctx = LatteParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                localctx = LatteParser.EmptyContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(LatteParser.T__5)
                pass
